@@ -28,25 +28,23 @@ ExtUtils::CBuilder = 0.26
 Devel::Hide = 0.0007            ; releasers *must* test both the XS and PP paths
 
 [DynamicPrereqs]
-:version = 0.007
+:version = 0.016
 -delimiter = |
--raw = |require 'inc/MakeMakerSubs.pm';
 -raw = |if (can_xs()) {
 ;         IMPORTANT!!! when changing prereqs here, also update in B::Hooks::EndOfScope::XS
--raw = |  $WriteMakefileArgs{PREREQ_PM}{'Variable::Magic'} = $FallbackPrereqs{'Variable::Magic'} = '0.48';
+-raw = |  requires('Variable::Magic', '0.48');
 -raw = |
 -raw = |  # make sure we smoke the pure-perl version fallback
 ;         IMPORTANT!!! when changing prereqs here, also update in t/10-test_without_vm_pure_pp.t
--raw = |  $WriteMakefileArgs{TEST_REQUIRES}{'Devel::Hide'} = $FallbackPrereqs{'Devel::Hide'} = '0.0007'
--raw = |    if is_smoker();
+-raw = |  test_requires('Devel::Hide', '0.0007') if is_smoker();
 -raw = |}
 -raw = |else {
--raw = |  $WriteMakefileArgs{PREREQ_PM}{'constant'} = $FallbackPrereqs{'constant'} = 0;
+-raw = |  requires('constant');
 -raw = |  if ($] < '5.010') {
--raw = |    $WriteMakefileArgs{PREREQ_PM}{'Scalar::Util'} = $FallbackPrereqs{'Scalar::Util'} = 0;
--raw = |    $WriteMakefileArgs{PREREQ_PM}{'base'} = $FallbackPrereqs{'base'} = 0;
+-raw = |    requires('Scalar::Util');
+-raw = |    requires('base');
 -raw = |  } else {
--raw = |    $WriteMakefileArgs{PREREQ_PM}{'Hash::Util::FieldHash'} = $FallbackPrereqs{'Hash::Util::FieldHash'} = 0;
--raw = |    $WriteMakefileArgs{PREREQ_PM}{'Tie::Hash'} = $FallbackPrereqs{'Tie::Hash'} = 0;
+-raw = |    requires('Hash::Util::FieldHash');
+-raw = |    requires('Tie::Hash');
 -raw = |  }
 -raw = |}
