@@ -1,6 +1,8 @@
 Revision history for B-Hooks-EndOfScope
 
 {{$NEXT}}
+  - more Makefile.PL updates - these contain slight functionality changes,
+    hence the trial release
 
 0.15      2015-05-14 21:46:06Z
   - updated the tooling for generating Makefile.PL
